--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tinyg.js",
+  "name": "tinyg-node",
   "version": "0.0.1",
   "description": "Node module for controlling TinyG.",
   "main": "index.js",
