--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "tinyg-node",
-  "version": "0.0.1",
+  "name": "tinyg",
+  "version": "0.0.2",
   "description": "Node module for controlling TinyG.",
-  "main": "index.js",
+  "main": "tinyg.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,7 +11,6 @@
     "email": "giseburt@gmail.com",
     "url": "http://www.synthetos.com"
   },
-  "main": "./tinyg",
   "repository": {
     "type": "git",
     "url": "git://github.com/giseburt/TinyG-node.git"
