Updated to tinyg.io example. Corrected pointer to latest hacked node-serialport.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   },
   "license": "GPL",
   "dependencies": {
-    "serialport": "git+https://github.com/giseburt/node-serialport.git#fix_close_and_flowcontrol"
+    "serialport": "git+https://github.com/giseburt/node-serialport.git#advanced"
   }
 }
