--- a/examples/tinyg.hello.web/package.json
+++ b/examples/tinyg.hello.web/package.json
@@ -9,6 +9,7 @@
   "author": "Rob Giseburt",
   "license": "GPL",
   "dependencies": {
-    "socket.io": "~0.9.16"
+    "socket.io": "~0.9.16",
+    "express": "~3.3.7"
   }
 }
