change serialport dep to the one in giseburt repo

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "chalk": "^0.5.1",
     "nomnom": "^1.8.0",
     "q": "^1.1.2",
-    "serialport": "^2.0.6",
+    "serialport": "git+https://github.com/giseburt/node-serialport.git",
     "sprintf": "^0.1.4"
   },
   "bin": {
